--- a/style.css
+++ b/style.css
@@ -3,6 +3,11 @@
     font-family: sans-serif;
 }
 
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 .container {
     display: grid;
     grid-template-columns: 1fr 4fr;
@@ -20,22 +25,55 @@
     gap: 2rem;
 }
 
-.first {
+.mainlinks {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
 
-.second {
+ul > * {
+    display: flex;
+    flex-direction: row;
+    gap: 0.8rem;
+    justify-content: flex-start;
+    align-items: center;
+    height: 2rem;
+}
+
+.logo {
+    display: flex;
+    gap: 1rem;
+    font-size: 1.5rem;
+    align-items: center;
+}
+.profile {
+    display: flex;
+}
+
+.seclinks {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
 }
+
 .mainbar {
     display: flex;
     flex-direction: column;
     gap: 1rem;
 }
+
+.searcharea {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.searchbar {
+    border: 1px solid black;
+    width: 40vw;
+    height: 3vw;
+}
+
 
 .nav {
     background-color: grey;
