--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     display: grid;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 img {
@@ -9,31 +10,77 @@ img {
 .sidebar {
     background-color: #38bdf8;
     grid-row: 1/3;
-    color: white;
     padding: 1vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-content: center;
+    font-size: 2em;
+    font-weight: 700;
+}
+
+.sidebar > * {
+    filter: invert(1);
 }
 
 .dashboard, .home, .profile, .messages, .history, .tasks, .communities, .settings, .support, .privacy {
     display: flex;
     align-items: center;
+    margin: 1vh;
+    max-width: 80%;
+    column-gap: 2vh;
 }
 
-img > div {
-    max-width: 10%;
+.dashboard {
+    font-size: 3ch;
+}
+
+.dashboard, .communities {
+    margin-bottom: 5vh;
+}
+
+.header {
+    grid-column: 2/10;
+    display: grid;
 }
 
 .searchbar {
-    grid-column: 2/5;
-    height: 10vh;
+    grid-row: 1/2;
+    grid-column: 1/10;
+    display: flex;
+    align-items: center;
+}
+
+.searchbar > img {
+    max-width: 2vh;
+    margin: 1vh;
+}
+
+input {
+    background-color: lightgray;
+    border: none;
+    border-radius: 10px;
+    width: 60vh;
+    height: 2.5vh;
+}
+
+.userinfo {
+    grid-row: 1/2;
+    grid-column: 8/10;
+}
+
+.usergreet {
+    grid-row: 2/2;
+    grid-column: 1/10;
+}
+
+.userbutt {
+    grid-row: 2/2;
+    grid-column: 8/10;
 }
 
 .main-content {
     overflow: auto;
-    grid-column: 2/5;
+    grid-column: 2/10;
     display: grid;
     grid-template-columns: 70% 30%;
-} 
+    background-color: lightgrey;
+}
