--- a/style.css
+++ b/style.css
@@ -1,10 +1,19 @@
 body {
     display: grid;
     font-family: Arial, Helvetica, sans-serif;
+    display: grid;
 }
 
 img {
     max-width: 10%;
+}
+
+button {
+    background-color: #38bdf8;
+    color: white;
+    border-width: 0;
+    border-radius: 5px;
+    margin: 1vh;
 }
 
 .sidebar {
@@ -37,8 +46,17 @@ img {
     margin-bottom: 5vh;
 }
 
-.header {
+.toprow {
+    display: flex;
+    align-items: center;
+}
+
+.rhside {
     grid-column: 2/10;
+    display: grid;
+}
+
+.header {
     display: grid;
 }
 
@@ -51,7 +69,7 @@ img {
 
 .searchbar > img {
     max-width: 2vh;
-    margin: 1vh;
+    margin: .25vh;
 }
 
 input {
@@ -65,21 +83,43 @@ input {
 .userinfo {
     grid-row: 1/2;
     grid-column: 8/10;
+    display: flex;
+    justify-content: center;
+    flex-wrap: nowrap;
+    gap: 20px;
+}
+
+.userinfo > img {
+    max-width: 2vh;
+}
+
+.userinfo, .searchbar {
+    height: 2vh;
+    margin: 3vh;
 }
 
 .usergreet {
     grid-row: 2/2;
     grid-column: 1/10;
+    display: flex;
+    align-items: center;
+}
+
+.usergreet > img {
+    max-width: 4vh;
+    margin: 2vh;
 }
 
 .userbutt {
     grid-row: 2/2;
     grid-column: 8/10;
+    display: flex;
+    align-items: center;
 }
 
 .main-content {
+    grid-row: 3;
     overflow: auto;
-    grid-column: 2/10;
     display: grid;
     grid-template-columns: 70% 30%;
     background-color: lightgrey;
