--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ button {
     color: white;
     border-width: 0;
     border-radius: 5px;
-    margin: 1vh;
+    margin: 10px;
+    padding: 10px 24px;
 }
 
 .sidebar {
@@ -69,7 +70,6 @@ button {
 
 .searchbar > img {
     max-width: 2vh;
-    margin: .25vh;
 }
 
 input {
@@ -84,7 +84,6 @@ input {
     grid-row: 1/2;
     grid-column: 8/10;
     display: flex;
-    justify-content: center;
     flex-wrap: nowrap;
     gap: 20px;
 }
@@ -93,7 +92,7 @@ input {
     max-width: 2vh;
 }
 
-.userinfo, .searchbar {
+.searchbar, .userinfo {
     height: 2vh;
     margin: 3vh;
 }
@@ -103,11 +102,12 @@ input {
     grid-column: 1/10;
     display: flex;
     align-items: center;
+    margin: 2.5vh;
 }
 
 .usergreet > img {
     max-width: 4vh;
-    margin: 2vh;
+    margin-right: 2vh;
 }
 
 .userbutt {
