--- a/style.css
+++ b/style.css
@@ -2,10 +2,9 @@ body {
     display: grid;
     font-family: Arial, Helvetica, sans-serif;
     display: grid;
-}
-
-img {
-    max-width: 10%;
+    grid-template-columns: 2fr 7fr;
+    grid-template-rows: 2fr 21fr;
+    margin: 0;
 }
 
 button {
@@ -13,13 +12,13 @@ button {
     color: white;
     border-width: 0;
     border-radius: 5px;
-    margin: 10px;
+    margin: 0 0 0 10px;
     padding: 10px 24px;
 }
 
 .sidebar {
     background-color: #38bdf8;
-    grid-row: 1/3;
+    grid-row: 1/-1;
     padding: 1vh;
     display: flex;
     flex-direction: column;
@@ -29,14 +28,15 @@ button {
 
 .sidebar > * {
     filter: invert(1);
-}
-
-.dashboard, .home, .profile, .messages, .history, .tasks, .communities, .settings, .support, .privacy {
     display: flex;
     align-items: center;
     margin: 1vh;
     max-width: 80%;
     column-gap: 2vh;
+}
+
+.sidebar img {
+    max-width: 10%;
 }
 
 .dashboard {
@@ -47,29 +47,35 @@ button {
     margin-bottom: 5vh;
 }
 
-.toprow {
-    display: flex;
-    align-items: center;
-}
-
-.rhside {
-    grid-column: 2/10;
-    display: grid;
-}
-
 .header {
+    grid-row: 1/2;
     display: grid;
+    grid-template-rows: 1fr 1fr;
 }
 
-.searchbar {
-    grid-row: 1/2;
-    grid-column: 1/10;
+.topheader {
     display: flex;
     align-items: center;
+    margin: 2.5vh;
+    justify-content: space-between;
 }
 
-.searchbar > img {
-    max-width: 2vh;
+.lhtopheader, .rhtopheader {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.lhtopheader,.rhtopheader img {
+    width: 2rem;
+    height: 2rem;
+}
+
+.lowheader {
+    grid-row: 2/3;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 2.5vh;
 }
 
 input {
@@ -78,23 +84,6 @@ input {
     border-radius: 10px;
     width: 60vh;
     height: 2.5vh;
-}
-
-.userinfo {
-    grid-row: 1/2;
-    grid-column: 8/10;
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 20px;
-}
-
-.userinfo > img {
-    max-width: 2vh;
-}
-
-.searchbar, .userinfo {
-    height: 2vh;
-    margin: 3vh;
 }
 
 .usergreet {
@@ -118,9 +107,33 @@ input {
 }
 
 .main-content {
-    grid-row: 3;
+    grid-row: 2;
+    grid-column: 2;
     overflow: auto;
     display: grid;
     grid-template-columns: 70% 30%;
     background-color: lightgrey;
 }
+
+.projects {
+    grid-column: 1/2;
+}
+
+.projects > div {
+    margin: 200px 200px 0 200px;
+    width: 200px;
+    height: 200px;
+    border-color: black;
+    border-width: 20px;
+    border-style: dashed;
+}
+
+.main-content {
+    display: grid;
+    grid-template-columns: 7fr 2fr;
+}
+
+.annon {
+    grid-column: 2/2;
+}
+
